add custom password encoder