@@ -8,6 +8,7 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Iterator;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class TodoService {
@@ -27,7 +28,7 @@ public class TodoService {
         return todosList
                 .stream()
                 .filter(todo -> todo.getUserName().equals(userName))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public void addTodo(String userName, String description, LocalDate targetDate, Boolean isDone) {
